--- a/pom.xml
+++ b/pom.xml
@@ -43,7 +43,11 @@
             <artifactId>lombok</artifactId>
             <optional>true</optional>
         </dependency>
-
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>1.18.12</version>
+		</dependency>
         <!-- RxJava 2-->
         <dependency>
             <groupId>io.reactivex.rxjava2</groupId>
