--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,15 @@
+spring.application.name: MicroservicioQuotation
+#server config
+server.port=8092
 
+ 
+
+#database config
+spring.jpa.database=POSTGRESQL
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://localhost:5432/Microservicio
+spring.datasource.username=postgres
+spring.datasource.password=1234
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
