--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,11 @@
 spring.application.name: MicroservicioQuotation
-#server config
-server.port=8092
+server.port=8089
 
- 
+spring.datasource.url=jdbc:postgresql://localhost/testCoti
+spring.datasource.username=postgres
+spring.datasource.password=1234
+spring.datasource.driver-class-name=org.postgresql.Driver
 
-#database config
-spring.jpa.database=POSTGRESQL
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/Microservicio
-spring.datasource.username=postgres
-spring.datasource.password=123456
-spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
