--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,17 @@
 spring.application.name: MicroservicioQuotation
 server.port=8089
 
-spring.datasource.url=jdbc:postgresql://localhost/testCoti
-spring.datasource.username=postgres
-spring.datasource.password=1234
-spring.datasource.driver-class-name=org.postgresql.Driver
-
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+#database config
+spring.jpa.database=POSTGRESQL
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://localhost:5432/Microservicio
+spring.datasource.username=postgres
+spring.datasource.password=1234
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+
+
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+
+
