--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,8 +8,8 @@ spring.jpa.hibernate.ddl-auto=update
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5432/Microservicio
 spring.datasource.username=postgres
-spring.datasource.password=postgres
-#spring.datasource.password=1234
+#spring.datasource.password=postgres
+spring.datasource.password=123456
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
 
