--- a/pom.xml
+++ b/pom.xml
@@ -87,6 +87,18 @@
             <scope>runtime</scope>
             <optional>true</optional>
         </dependency>
+        
+        
+        <dependency>
+			<groupId>javax.ws.rs</groupId>
+			<artifactId>javax.ws.rs-api</artifactId>
+			<version>2.0</version>
+		</dependency>
+		<dependency>
+		    <groupId>org.springframework.boot</groupId>
+		    <artifactId>spring-boot-starter-jersey</artifactId>
+		    <version>1.2.0.RELEASE</version>
+		</dependency>
     </dependencies>
 
     <build>
